// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> should render checkbox with label 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1px;
  border-style: solid;
  margin: 0px;
  margin-top: 3px;
  border-radius: 2px;
  margin-right: 8px;
  background-color: hsla(220,27%,98%,1);
  border-color: hsla(216,19%,89%,1);
}

.c3 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c1:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c1:hover + div,
.c1:focus + div {
  border-color: hsla(216,19%,89%,1);
  background-color: hsla(216,19%,89%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

<div>
  <div
    class="Boxweb__Box-xvyj85-0"
  >
    <label
      class="c0"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-hidden="true"
        aria-invalid="false"
        aria-required="false"
        class="c1"
        role="checkbox"
        type="checkbox"
        value=""
      />
      <div
        class="c2"
      />
      <div
        class="Boxweb__Box-xvyj85-0"
      >
        <div
          class="c3"
          color="surface.text.subtle.lowContrast"
          font-family="text"
          font-size="100"
          font-weight="regular"
        >
          Remember password
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> should set disabled state with isDisabled 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1px;
  border-style: solid;
  margin: 0px;
  margin-top: 3px;
  border-radius: 2px;
  margin-right: 8px;
  background-color: hsla(220,30%,96%,1);
  border-color: hsla(220,30%,96%,1);
}

.c3 {
  color: hsla(214,18%,69%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c1:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

<div>
  <div
    class="Boxweb__Box-xvyj85-0"
  >
    <label
      class="c0"
    >
      <input
        aria-checked="false"
        aria-disabled="true"
        aria-hidden="true"
        aria-invalid="false"
        aria-required="false"
        class="c1"
        disabled=""
        role="checkbox"
        type="checkbox"
        value=""
      />
      <div
        class="c2"
      />
      <div
        class="Boxweb__Box-xvyj85-0"
      >
        <div
          class="c3"
          color="surface.text.placeholder.lowContrast"
          font-family="text"
          font-size="100"
          font-weight="regular"
        >
          Remember password
        </div>
      </div>
    </label>
  </div>
</div>
`;

exports[`<Checkbox /> should set error state with validationState 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1px;
  border-style: solid;
  margin: 0px;
  margin-top: 3px;
  border-radius: 2px;
  margin-right: 8px;
  background-color: hsla(9,91%,56%,0.09);
  border-color: hsla(8,73%,47%,1);
}

.c4 {
  margin-top: 4px;
}

.c5 {
  margin-right: 4px;
}

.c3 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c6 {
  color: hsla(8,73%,47%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.6875rem;
  font-weight: 400;
  font-style: italic;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c1:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

<div>
  <div
    class=""
  >
    <label
      class="c0"
    >
      <input
        aria-checked="false"
        aria-disabled="false"
        aria-errormessage="checkbox-19-errortext-21"
        aria-hidden="true"
        aria-invalid="true"
        aria-required="false"
        class="c1"
        role="checkbox"
        type="checkbox"
        value=""
      />
      <div
        class="c2"
      />
      <div
        class=""
      >
        <div
          class="c3"
          color="surface.text.subtle.lowContrast"
          font-family="text"
          font-size="100"
          font-weight="regular"
        >
          Remember password
        </div>
      </div>
    </label>
    <div
      class="c4"
    />
    <span
      style="display: flex; flex-direction: row; align-items: center;"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="12px"
        viewBox="0 0 24 24"
        width="12px"
      >
        <path
          d="M12 11C12.5523 11 13 11.4477 13 12V16C13 16.5523 12.5523 17 12 17C11.4477 17 11 16.5523 11 16V12C11 11.4477 11.4477 11 12 11Z"
          fill="hsla(8, 73%, 47%, 1)"
        />
        <path
          d="M12 7C11.4477 7 11 7.44772 11 8C11 8.55228 11.4477 9 12 9H12.01C12.5623 9 13.01 8.55228 13.01 8C13.01 7.44772 12.5623 7 12.01 7H12Z"
          fill="hsla(8, 73%, 47%, 1)"
        />
        <path
          clip-rule="evenodd"
          d="M1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12ZM12 3C7.02944 3 3 7.02944 3 12C3 16.9706 7.02944 21 12 21C16.9706 21 21 16.9706 21 12C21 7.02944 16.9706 3 12 3Z"
          fill="hsla(8, 73%, 47%, 1)"
          fill-rule="evenodd"
        />
      </svg>
      <div
        class="c5"
      />
      <span
        class="c6"
        color="feedback.text.negative.lowContrast"
        font-family="text"
        font-size="50"
        font-style="italic"
        id="checkbox-19-errortext-21"
      >
        This has to be checked
      </span>
    </span>
  </div>
</div>
`;

exports[`<Checkbox /> should set to indeterminate state of checkbox 1`] = `
.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 16px;
  height: 16px;
  border-width: 1px;
  border-style: solid;
  margin: 0px;
  margin-top: 3px;
  border-radius: 2px;
  margin-right: 8px;
  background-color: hsla(213,89%,56%,1);
  border-color: hsla(213,89%,56%,1);
}

.c3 {
  -webkit-animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
  animation: gYwSSW 150ms cubic-bezier(0.17,0,1,1);
}

.c4 {
  color: hsla(216,27%,36%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 0.875rem;
  font-weight: 400;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 1.25rem;
  text-align: left;
  margin: 0;
  padding: 0;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c1 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  height: 1px;
  margin: 0 -1px -1px 0;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  white-space: nowrap;
  word-wrap: normal;
}

.c1:focus + div {
  outline: 1px solid white;
  box-shadow: 0px 0px 0px 4px hsla(218,89%,51%,0.18);
}

.c1:hover + div,
.c1:focus + div {
  border-color: hsla(218,89%,51%,1);
  background-color: hsla(218,89%,51%,1);
  -webkit-transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  transition-timing-function: cubic-bezier(0.3,0,0.2,1);
  -webkit-transition-duration: 70ms;
  transition-duration: 70ms;
}

<div>
  <div
    class="Boxweb__Box-xvyj85-0"
  >
    <label
      class="c0"
    >
      <input
        aria-checked="true"
        aria-disabled="false"
        aria-hidden="true"
        aria-invalid="false"
        aria-required="false"
        checked=""
        class="c1"
        role="checkbox"
        type="checkbox"
        value=""
      />
      <div
        class="c2"
      >
        <div
          class="c3"
          style="position: absolute; display: flex;"
        >
          <svg
            aria-hidden="true"
            fill="none"
            height="16px"
            viewBox="0 0 16 16"
            width="16px"
          >
            <path
              d="M4 8C4 7.72386 4.22386 7.5 4.5 7.5H11.5C11.7761 7.5 12 7.72386 12 8C12 8.27614 11.7761 8.5 11.5 8.5H4.5C4.22386 8.5 4 8.27614 4 8Z"
              fill="hsla(220, 27%, 98%, 1)"
            />
          </svg>
        </div>
      </div>
      <div
        class="Boxweb__Box-xvyj85-0"
      >
        <div
          class="c4"
          color="surface.text.subtle.lowContrast"
          font-family="text"
          font-size="100"
          font-weight="regular"
        >
          Remember password
        </div>
      </div>
    </label>
  </div>
</div>
`;
